--- a/views/index.ejs
+++ b/views/index.ejs
@@ -389,6 +389,34 @@
                 </div>
               </div>
             </div>
+            <div class="other-inputs-container">
+              <div class="label-input-grouping">
+                <label for="recipe-photo" class="create-input-label"
+                  >Upload Photo</label
+                >
+                <div class="upload-photo-custom">
+                  <input
+                    type="file"
+                    id="recipe-photo"
+                    name="recipe-photo"
+                    class="recipe-photo-input"
+                  />
+                  <span class="file-custom"></span>
+                </div>
+              </div>
+              <div class="label-input-grouping">
+                <label for="num-serving" class="create-input-label"
+                  >Number of Serving</label
+                >
+
+                <input
+                  type="number"
+                  id="num-serving"
+                  name="num-serving"
+                  class="num-serving-input"
+                />
+              </div>
+            </div>
           </div>
 
           <div class="ingredient-sets-input create-form-2">
