number of serving input style and next button

--- a/public/styles/general.css
+++ b/public/styles/general.css
@@ -151,3 +151,9 @@ body {
 .reset-textarea {
   resize: none;
 }
+/* To remove number increaser */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
