--- a/views/index.ejs
+++ b/views/index.ejs
@@ -413,7 +413,7 @@
                   type="number"
                   id="num-serving"
                   name="num-serving"
-                  class="num-serving-input"
+                  class="create-input reset-focus num-serving-input"
                 />
               </div>
             </div>
