added form data

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -403,6 +403,7 @@
                   />
                   <span class="file-custom"></span>
                 </div>
+                <!-- <input type="file" id="recipe-photo" name="recipe-photo" /> -->
               </div>
               <div class="label-input-grouping">
                 <label for="num-serving" class="create-input-label"
