add ingredient fixed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -421,7 +421,7 @@
           </div>
 
           <div class="ingredient-sets-input create-form-2">
-            <div class="ingredient-set">
+            <div class="ingredient-set-inputs">
               <header class="upper-container">
                 <div class="set-name-container">
                   <label
