sending data to server working

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -637,5 +637,6 @@
     <script type="module" src="scripts/store-create-recipe.js"></script>
     <script type="module" src="scripts/ingredient-buttons.js"></script>
     <script type="module" src="scripts/instruction-buttons.js"></script>
+    <script type="module" src="scripts/post-recipe.js"></script>
   </body>
 </html>
