--- a/views/index.ejs
+++ b/views/index.ejs
@@ -138,9 +138,9 @@
                 <span class="nutrition-bold"><%=recipe.protein%>g</span>
                 protein
               </p>
-              <p class="calories">
+              <p class="fat">
                 <span class="nutrition-bold"><%=recipe.fat%>kcal</span>
-                calories
+                fat
               </p>
             </div>
           </div>
