fixed time reformat

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -139,7 +139,7 @@
                 protein
               </p>
               <p class="fat">
-                <span class="nutrition-bold"><%=recipe.fat%>kcal</span>
+                <span class="nutrition-bold"><%=recipe.fat%>g</span>
                 fat
               </p>
             </div>
