retreive recipe data

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -564,6 +564,7 @@
     <script type="module" src="scripts/ingredient-buttons.js"></script>
     <script type="module" src="scripts/instruction-buttons.js"></script>
     <script type="module" src="scripts/post-recipe.js"></script>
-    <script src="scripts/delete-recipe.js"></script>
+    <script type="module" src="scripts/delete-recipe.js"></script>
+    <script type="module" src="scripts/edit-recipe.js"></script>
   </body>
 </html>
