--- a/public/styles/general.css
+++ b/public/styles/general.css
@@ -157,3 +157,8 @@ input[type="number"]::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+img {
+  color: var(--main-yellow-shade4);
+  font-family: "Inter", sans-serif;
+  font-size: var(--size-small-x1);
+}
