--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -2,8 +2,10 @@
   background: url(/imgs/carousel/header-background2.jpg) center/cover no-repeat;
   height: 100vh;
   position: relative;
-  align-content: center;
-  justify-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .header::before {
   content: "";
@@ -321,6 +323,7 @@
 }
 .important-icon {
   font-size: 32px;
+  color: var(--main-yellow-shade4);
 }
 .floating-create-recipe {
   background-color: transparent;
@@ -566,27 +569,32 @@
   position: absolute;
   top: 0;
   left: 0;
-  padding: 1rem;
+
+  height: 100%;
   right: 0;
-  bottom: 0;
   background-color: #fff;
 }
 .file-custom::before,
 .file-custom::after {
   transition: all 0.3s;
+  position: absolute;
+
+  top: 0;
+  height: 100%;
+  display: grid;
+  place-content: center;
 }
 .file-custom::before {
   content: attr(data-before);
+  left: 0;
+  padding-left: 1rem;
 }
 .file-custom::after {
   color: #fff;
-  padding: 1rem;
   content: "Browse";
   background-color: var(--grey-tint-1);
-
-  position: absolute;
-  top: 0;
   right: 0;
+  padding: 0 1.2rem;
 }
 
 .upload-photo-custom:active .file-custom::after {
