added website icon

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
     <title>Tasty Notebook</title>
     <link rel="stylesheet" href="styles/general.css" />
     <link rel="stylesheet" href="styles/styles.css" />
+    <link type="image/png" href="imgs/tasty-notebook-logo.png" rel="icon" />
   </head>
   <!-- classes: show-create-recipe-container show-form-overlay hide-scroll -->
   <body class="">
